--- a/style.css
+++ b/style.css
@@ -136,15 +136,30 @@ p {
   background-color: #551988;
   font-family: "Montserrat", sans-serif;
   border-radius: 10px;
-  border: none;
+  
   color: white;
   font-weight: 600;
   transition: 0.5s;
 }
-.bt button:hover {
+.bt .conme:hover {
   margin-top: -0.5rem;
   color: #551988;
   background-color: white;
+  border: 2px solid #551988;
+}
+.bt .resume:hover{
+  margin-top: -0.5rem;
+  color: white;
+  background-color:#551988;
+  border: 2px solid white;
+}
+.bt .conme{
+  border: 2px solid white;
+}
+.bt .resume{
+  background-color: white;
+  color: #551988;
+  border: 2px solid #551988;
 }
 .whatido {
   display: flex;
