--- a/style.css
+++ b/style.css
@@ -435,11 +435,11 @@ p {
 
   .whatido {
     margin-top: 5vh;
-    padding: 0;
+    
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: flex-start;
     /* width: 10vw; */
   }
@@ -467,9 +467,9 @@ p {
     flex-wrap: wrap;
   }
   .education {
-    margin-top: 4vh;
-    height:70vh;
-    padding: 2rem 0 0rem 0rem;
+    /* margin-top: 8vh; */
+    height:auto;
+    padding: 0rem 0 0rem 0rem;
     word-spacing: 0.2rem;
     color: white;
     /* background-color:cadetblue; */
@@ -515,14 +515,16 @@ p {
     text-align: left;
   }
   .achieve {
-    flex-direction: column;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: flex-start;
+    /* background-color: #ea4335; */
+    margin-top: 1rem;
+    /* display: flex;
+    flex-direction: column; */
+    height: auto;
   }
-  .achieve .h1 {
-    padding: 5rem 0rem 5rem 5rem;
-    font-size: 3rem;
+  .achieve h2 {
+    /* display: none; */
+    margin-left: 2rem;
+    font-size: 35px;
     color: white;
   }
   .achcard img {
@@ -532,19 +534,19 @@ p {
     transition: 1s ease-in;
     margin-top: 2rem;
   }
-  .achcard img:hover {
+  /* .achcard img:hover {
     transform: scale(1.2);
-  }
-  .achievecard {
+  } */
+  /* .achievecard {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    /* background-color: #0e76a8; */
+    background-color: #0e76a8;
     width: 100%;
     height: 50rem;
 
     flex-wrap: wrap;
-  }
+  } */
   .reach {
     justify-content: space-evenly;
     margin: 25rem 0 0 0;
@@ -569,6 +571,8 @@ p {
     gap: 5px;
   }
   .exp {
+    margin-top: 3rem;
+    height: auto;
     align-items: flex-start;
   }
   .exp h1 {
