--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@
             left: 0;
             right: 0;
             background: rgba(0, 0, 0, 0.4);
-            backdrop-filter: blur(10px);
+            /* backdrop-filter: blur(10px); */
             padding: 1rem;
             border-radius: 0.5rem;
             margin: 0 20px;
@@ -88,12 +88,14 @@
 
         .mobile-menu.active {
             display: block;
+            background-color:#000000;
         }
 
         .mobile-menu a {
             display: block;
             padding: 0.5rem 0;
             color: white;
+            /* background-color: #fbbf24; */
             text-decoration: none;
             border-bottom: 1px solid rgba(255, 255, 255, 0.1);
         }
