--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
         }
 
         body {
-            font-family: 'Inter', sans-serif;
+           font-family: "Segoe UI",Frutiger,Frutiger Linotype,Dejavu Sans,Helvetica Neue,Arial,sans-serif; 
             background: linear-gradient(135deg, #0f172a 0%, #581c87 50%, #0f172a 100%);
             color: white;
             line-height: 1.6;
@@ -87,8 +87,11 @@
         }
 
         .mobile-menu.active {
+          
+          
             display: block;
-            background-color:#000000;
+            background-color: #191837;
+            filter: drop-shadow(0 4px 10px rgba(255, 255, 255, 0.286));
         }
 
         .mobile-menu a {
@@ -570,8 +573,8 @@
         /* Scroll to Top Button */
         .scroll-top {
             position: fixed;
-            bottom: 2rem;
-            right: 2rem;
+            bottom: 1rem;
+            right: 1rem;
             background: #7c3aed;
             color: white;
             border: none;
